// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for the connected Sidebar component with reduxInitialState should render with given state from Redux store 1`] = `
.c3 {
  display: block;
  width: 100%;
  padding: 1.5rem;
  font-size: 1.4rem;
  font-weight: bold;
  line-height: 1.3;
  border: 0;
  background-image: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4NCjwhLS0gR2VuZXJhdG9yOiBBZG9iZSBJbGx1c3RyYXRvciAxNi4wLjQsIFNWRyBFeHBvcnQgUGx1Zy1JbiAuIFNWRyBWZXJzaW9uOiA2LjAwIEJ1aWxkIDApICAtLT4NCjwhRE9DVFlQRSBzdmcgUFVCTElDICItLy9XM0MvL0RURCBTVkcgMS4xLy9FTiIgImh0dHA6Ly93d3cudzMub3JnL0dyYXBoaWNzL1NWRy8xLjEvRFREL3N2ZzExLmR0ZCI+DQo8c3ZnIHZlcnNpb249IjEuMSIgaWQ9IkxheWVyXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4Ig0KCSB3aWR0aD0iNjEycHgiIGhlaWdodD0iNzkycHgiIHZpZXdCb3g9IjAgMCA2MTIgNzkyIiBlbmFibGUtYmFja2dyb3VuZD0ibmV3IDAgMCA2MTIgNzkyIiB4bWw6c3BhY2U9InByZXNlcnZlIj4NCjx0aXRsZT5hcnJvd3M8L3RpdGxlPg0KPHBhdGggZmlsbD0iI0ZGRkZGRiIgZD0iTTIyMS42NTIsMzY5Ljg2NGw4NC43NDUtMTE4LjAwOGw4My45NTEsMTE4LjAwOEgyMjEuNjUyeiBNMzkwLjM0OCw0MjIuMTM2bC04My45NTEsMTE4LjAwOGwtODQuNzQ1LTExOC4wMDgNCglIMzkwLjM0OHoiLz4NCjwvc3ZnPg0K");
  background-position: right 0px center;
  background-repeat: no-repeat;
  background-size: auto 80%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:focus {
  outline: none;
  border-color: transparent;
  box-shadow: 1px 1px 6px 0px rgba(39,124,218,0.2);
}

.c4 {
  padding: 1.3rem;
}

.c4.reported-cases-wrapper {
  border-bottom: 1px solid #ccc;
}

.c5 {
  margin: 0.6rem 0;
}

.c6 {
  margin-bottom: 0.3rem;
}

.c7 {
  display: inline-block;
  width: 2rem;
  height: 2rem;
  margin-bottom: -0.3rem;
  margin-right: 0.8em;
}

.c8 {
  display: inline-block;
  font-size: 1.8em;
}

.c0 {
  position: absolute;
  left: 0;
  bottom: 0;
  background-color: #efefef;
  overflow: auto;
  z-index: 2;
}

.c0 h4 {
  padding-top: 1em;
}

.c2 select {
  color: #fff;
  background-color: #e43b46;
}

.c2 option {
  color: #fff;
  background-color: #e43b46;
}

.c1 select {
  color: #fff;
  background-color: #000;
}

.c1 option {
  color: #fff;
  background-color: #000;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      aria-expanded={false}
      aria-owns={null}
      className="MuiAutocomplete-root"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot CountrySelect-inputRoot-1 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          onClick={[Function]}
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls={null}
            aria-invalid={false}
            autoCapitalize="none"
            autoComplete="off"
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            disabled={false}
            id="country-select"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            required={false}
            spellCheck="false"
            type="text"
            value=""
          />
          <div
            className="MuiAutocomplete-endAdornment"
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-3"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <select
      className="c3"
      name="outbreak"
      onChange={[Function]}
      value="Ebola Outbreak"
    >
      <option
        value="Ebola Outbreak"
      >
        Ebola Outbreak
      </option>
      <option
        value="COVID 19"
      >
        COVID 19
      </option>
    </select>
  </div>
  <div>
    <div
      className="react-daterange-picker react-daterange-picker--closed react-daterange-picker--enabled"
      onFocus={[Function]}
    >
      <div
        className="react-daterange-picker__wrapper"
      >
        <div
          className="react-daterange-picker__inputGroup"
          onClick={[Function]}
        >
          <input
            max="275760-09-12"
            min="0000-12-31"
            name="daterange_from"
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "position": "absolute",
                "visibility": "hidden",
                "zIndex": "-999",
              }
            }
            type="date"
            value="2014-10-01"
          />
          
          <input
            autoComplete="off"
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
            data-input="true"
            inputMode="numeric"
            max={12}
            min={1}
            name="month"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="--"
            required={null}
            type="number"
            value={10}
          />
          <span
            className="react-date-picker__inputGroup__divider"
          >
            /
          </span>
          <input
            autoComplete="off"
            autoFocus={false}
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
            data-input="true"
            inputMode="numeric"
            max={31}
            min={1}
            name="day"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="--"
            required={null}
            type="number"
            value={1}
          />
          <span
            className="react-date-picker__inputGroup__divider"
          >
            /
          </span>
          <input
            autoComplete="off"
            autoFocus={false}
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
            data-input="true"
            inputMode="numeric"
            max={275760}
            min={1}
            name="year"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="----"
            required={null}
            step={1}
            type="number"
            value={2014}
          />
          
        </div>
        <span
          className="react-daterange-picker__range-divider"
        >
          –
        </span>
        <div
          className="react-daterange-picker__inputGroup"
          onClick={[Function]}
        >
          <input
            max="275760-09-12"
            min="0000-12-31"
            name="daterange_to"
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "position": "absolute",
                "visibility": "hidden",
                "zIndex": "-999",
              }
            }
            type="date"
            value="2016-02-20"
          />
          
          <input
            autoComplete="off"
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
            data-input="true"
            inputMode="numeric"
            max={12}
            min={1}
            name="month"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="--"
            required={null}
            type="number"
            value={2}
          />
          <span
            className="react-date-picker__inputGroup__divider"
          >
            /
          </span>
          <input
            autoComplete="off"
            autoFocus={false}
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
            data-input="true"
            inputMode="numeric"
            max={29}
            min={1}
            name="day"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="--"
            required={null}
            type="number"
            value={20}
          />
          <span
            className="react-date-picker__inputGroup__divider"
          >
            /
          </span>
          <input
            autoComplete="off"
            autoFocus={false}
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
            data-input="true"
            inputMode="numeric"
            max={275760}
            min={1}
            name="year"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="----"
            required={null}
            step={1}
            type="number"
            value={2016}
          />
          
        </div>
        <button
          className="react-daterange-picker__calendar-button react-daterange-picker__button"
          onClick={[Function]}
          onFocus={[Function]}
          type="button"
        >
          <svg
            className="react-daterange-picker__calendar-button__icon react-daterange-picker__button__icon"
            height={19}
            stroke="black"
            strokeWidth={2}
            viewBox="0 0 19 19"
            width={19}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="15"
              width="15"
              x="2"
              y="2"
            />
            <line
              x1="6"
              x2="6"
              y1="0"
              y2="4"
            />
            <line
              x1="13"
              x2="13"
              y1="0"
              y2="4"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c4 reported-cases-wrapper"
  >
    <p>
      <strong>
        Reported Cases
         from:
        <br />
        Wed Oct 01 2014
         to 
        Sat Feb 20 2016
      </strong>
    </p>
    <div
      className="c5"
    >
      <div
        className="c6"
      >
        Suspected and confirmed
      </div>
      <div
        className="c7"
        style={
          Object {
            "backgroundColor": "#4D73CE",
          }
        }
      />
      <div
        className="c8"
      >
        0
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <h4>
      SUMMARY
    </h4>
    <p>
      From 
      Wed Oct 01 2014
       to 
      Sat Feb 20 2016
      , the Ebola outbreak in 
      West Africa
       
      has affected
       
      0
       people
       (suspected and confirmed cases)
      .
    </p>
  </div>
</div>
`;

exports[`Tests for the connected Sidebar component with riskViewState should render with given state from Redux store 1`] = `
.c3 {
  display: block;
  width: 100%;
  padding: 1.5rem;
  font-size: 1.4rem;
  font-weight: bold;
  line-height: 1.3;
  border: 0;
  background-image: url("data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0idXRmLTgiPz4NCjwhLS0gR2VuZXJhdG9yOiBBZG9iZSBJbGx1c3RyYXRvciAxNi4wLjQsIFNWRyBFeHBvcnQgUGx1Zy1JbiAuIFNWRyBWZXJzaW9uOiA2LjAwIEJ1aWxkIDApICAtLT4NCjwhRE9DVFlQRSBzdmcgUFVCTElDICItLy9XM0MvL0RURCBTVkcgMS4xLy9FTiIgImh0dHA6Ly93d3cudzMub3JnL0dyYXBoaWNzL1NWRy8xLjEvRFREL3N2ZzExLmR0ZCI+DQo8c3ZnIHZlcnNpb249IjEuMSIgaWQ9IkxheWVyXzEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4Ig0KCSB3aWR0aD0iNjEycHgiIGhlaWdodD0iNzkycHgiIHZpZXdCb3g9IjAgMCA2MTIgNzkyIiBlbmFibGUtYmFja2dyb3VuZD0ibmV3IDAgMCA2MTIgNzkyIiB4bWw6c3BhY2U9InByZXNlcnZlIj4NCjx0aXRsZT5hcnJvd3M8L3RpdGxlPg0KPHBhdGggZmlsbD0iI0ZGRkZGRiIgZD0iTTIyMS42NTIsMzY5Ljg2NGw4NC43NDUtMTE4LjAwOGw4My45NTEsMTE4LjAwOEgyMjEuNjUyeiBNMzkwLjM0OCw0MjIuMTM2bC04My45NTEsMTE4LjAwOGwtODQuNzQ1LTExOC4wMDgNCglIMzkwLjM0OHoiLz4NCjwvc3ZnPg0K");
  background-position: right 0px center;
  background-repeat: no-repeat;
  background-size: auto 80%;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c3:focus {
  outline: none;
  border-color: transparent;
  box-shadow: 1px 1px 6px 0px rgba(39,124,218,0.2);
}

.c4 {
  padding: 1.3rem;
}

.c4.reported-cases-wrapper {
  border-bottom: 1px solid #ccc;
}

.c0 {
  position: absolute;
  left: 0;
  bottom: 0;
  background-color: #efefef;
  overflow: auto;
  z-index: 2;
}

.c0 h4 {
  padding-top: 1em;
}

.c2 select {
  color: #fff;
  background-color: #e43b46;
}

.c2 option {
  color: #fff;
  background-color: #e43b46;
}

.c1 select {
  color: #fff;
  background-color: #000;
}

.c1 option {
  color: #fff;
  background-color: #000;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      aria-expanded={false}
      aria-owns={null}
      className="MuiAutocomplete-root"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="combobox"
    >
      <div
        className="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
      >
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiAutocomplete-inputRoot CountrySelect-inputRoot-1 MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
          onClick={[Function]}
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-controls={null}
            aria-invalid={false}
            autoCapitalize="none"
            autoComplete="off"
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiAutocomplete-input MuiAutocomplete-inputFocused MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
            disabled={false}
            id="country-select"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            required={false}
            spellCheck="false"
            type="text"
            value="All"
          />
          <div
            className="MuiAutocomplete-endAdornment"
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-2 MuiOutlinedInput-notchedOutline"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="PrivateNotchedOutline-legend-3"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c2"
  >
    <select
      className="c3"
      name="outbreak"
      onChange={[Function]}
      value="Ebola Outbreak"
    >
      <option
        value="Ebola Outbreak"
      >
        Ebola Outbreak
      </option>
      <option
        value="COVID 19"
      >
        COVID 19
      </option>
    </select>
  </div>
  <div>
    <div
      className="react-daterange-picker react-daterange-picker--closed react-daterange-picker--enabled"
      onFocus={[Function]}
    >
      <div
        className="react-daterange-picker__wrapper"
      >
        <div
          className="react-daterange-picker__inputGroup"
          onClick={[Function]}
        >
          <input
            max="275760-09-12"
            min="0000-12-31"
            name="daterange_from"
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "position": "absolute",
                "visibility": "hidden",
                "zIndex": "-999",
              }
            }
            type="date"
            value="2014-10-01"
          />
          
          <input
            autoComplete="off"
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
            data-input="true"
            inputMode="numeric"
            max={12}
            min={1}
            name="month"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="--"
            required={null}
            type="number"
            value={10}
          />
          <span
            className="react-date-picker__inputGroup__divider"
          >
            /
          </span>
          <input
            autoComplete="off"
            autoFocus={false}
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
            data-input="true"
            inputMode="numeric"
            max={31}
            min={1}
            name="day"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="--"
            required={null}
            type="number"
            value={1}
          />
          <span
            className="react-date-picker__inputGroup__divider"
          >
            /
          </span>
          <input
            autoComplete="off"
            autoFocus={false}
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
            data-input="true"
            inputMode="numeric"
            max={275760}
            min={1}
            name="year"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="----"
            required={null}
            step={1}
            type="number"
            value={2014}
          />
          
        </div>
        <span
          className="react-daterange-picker__range-divider"
        >
          –
        </span>
        <div
          className="react-daterange-picker__inputGroup"
          onClick={[Function]}
        >
          <input
            max="275760-09-12"
            min="0000-12-31"
            name="daterange_to"
            onChange={[Function]}
            onFocus={[Function]}
            style={
              Object {
                "position": "absolute",
                "visibility": "hidden",
                "zIndex": "-999",
              }
            }
            type="date"
            value="2016-02-20"
          />
          
          <input
            autoComplete="off"
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__month"
            data-input="true"
            inputMode="numeric"
            max={12}
            min={1}
            name="month"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="--"
            required={null}
            type="number"
            value={2}
          />
          <span
            className="react-date-picker__inputGroup__divider"
          >
            /
          </span>
          <input
            autoComplete="off"
            autoFocus={false}
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__day"
            data-input="true"
            inputMode="numeric"
            max={29}
            min={1}
            name="day"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="--"
            required={null}
            type="number"
            value={20}
          />
          <span
            className="react-date-picker__inputGroup__divider"
          >
            /
          </span>
          <input
            autoComplete="off"
            autoFocus={false}
            className="react-daterange-picker__inputGroup__input react-daterange-picker__inputGroup__year"
            data-input="true"
            inputMode="numeric"
            max={275760}
            min={1}
            name="year"
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            placeholder="----"
            required={null}
            step={1}
            type="number"
            value={2016}
          />
          
        </div>
        <button
          className="react-daterange-picker__calendar-button react-daterange-picker__button"
          onClick={[Function]}
          onFocus={[Function]}
          type="button"
        >
          <svg
            className="react-daterange-picker__calendar-button__icon react-daterange-picker__button__icon"
            height={19}
            stroke="black"
            strokeWidth={2}
            viewBox="0 0 19 19"
            width={19}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              fill="none"
              height="15"
              width="15"
              x="2"
              y="2"
            />
            <line
              x1="6"
              x2="6"
              y1="0"
              y2="4"
            />
            <line
              x1="13"
              x2="13"
              y1="0"
              y2="4"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    className="c4"
  >
    <h4>
      SUMMARY
    </h4>
    <p>
      From 
      Wed Oct 01 2014
       to 
      Sat Feb 20 2016
      , the Ebola outbreak in 
      West Africa
       
      has affected
       
      0
       people
       (suspected and confirmed cases)
      .
    </p>
  </div>
  <div
    className="c4"
  >
    <strong>
      <p>
        The top 10 countries with the highest relative risk of Ebola spread are:
      </p>
    </strong>
    <ol>
      <li>
        Guinea
      </li>
      <li>
        Nigeria
      </li>
      <li>
        Ivory Coast
      </li>
      <li>
        Sierra Leone
      </li>
      <li>
        Mali
      </li>
      <li>
        Liberia
      </li>
      <li>
        Senegal
      </li>
      <li>
        Ghana
      </li>
      <li>
        Burkina Faso
      </li>
      <li>
        Democratic Republic of the Congo
      </li>
    </ol>
  </div>
</div>
`;
